refactor(animal): usar IDs en lugar de nombres en DTOs, servicio y tests